[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/inf.png" type="Texture" id=1]
[ext_resource path="res://Assets/Scripts/InfUnit.gd" type="Script" id=2]
[ext_resource path="res://Assets/Art/box.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/target.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/shield.png" type="Texture" id=5]
[ext_resource path="res://Assets/Art/slowArrow.png" type="Texture" id=6]
[ext_resource path="res://Assets/Art/dot.png" type="Texture" id=7]
[ext_resource path="res://Assets/Fonts/Font.tres" type="DynamicFont" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 384.412, 447.407 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 380.899, 425.857 )

[sub_resource type="CircleShape2D" id=3]
resource_local_to_scene = true
radius = 805.847

[node name="InfUnit" type="KinematicBody2D" groups=[
"Unit",
]]
scale = Vector2( 0.106775, 0.106775 )
input_pickable = true
collision_layer = 512
script = ExtResource( 2 )

[node name="inf" type="Sprite" parent="."]
position = Vector2( 62.8964, -87.5079 )
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="." groups=[
"UnitArea",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -27.4038 )
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.94356, -27.1246 )
shape = SubResource( 2 )

[node name="box" type="Sprite" parent="."]
position = Vector2( 0, -40.2887 )
scale = Vector2( 1.22919, 1.21616 )
texture = ExtResource( 3 )

[node name="target" type="Sprite" parent="."]
position = Vector2( 2316.16, 0 )
texture = ExtResource( 4 )
offset = Vector2( 150, 150 )

[node name="Detection" type="Area2D" parent="."]
position = Vector2( -2.94357, 2.9563 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 3 )

[node name="HP" type="Label" parent="."]
margin_left = -73.7342
margin_top = 424.492
margin_right = -33.7342
margin_bottom = 442.492
rect_scale = Vector2( 16.2109, 28.5783 )
custom_fonts/font = ExtResource( 8 )
text = "5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="shield" type="Sprite" parent="."]
visible = false
position = Vector2( 512, -298.186 )
texture = ExtResource( 5 )

[node name="slowArrow" type="Sprite" parent="."]
visible = false
position = Vector2( -129.557, 369.271 )
scale = Vector2( 0.222425, 0.222425 )
texture = ExtResource( 6 )

[node name="slowArrow2" type="Sprite" parent="."]
visible = false
position = Vector2( -267.887, 366.927 )
scale = Vector2( 0.222425, 0.222425 )
texture = ExtResource( 6 )

[node name="dot" type="Sprite" parent="."]
visible = false
position = Vector2( -406.047, -662.963 )
scale = Vector2( 0.483945, 0.483945 )
texture = ExtResource( 7 )

[node name="dot2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -662.963 )
scale = Vector2( 0.483945, 0.483945 )
texture = ExtResource( 7 )

[node name="dot3" type="Sprite" parent="."]
visible = false
position = Vector2( 390.853, -662.963 )
scale = Vector2( 0.483945, 0.483945 )
texture = ExtResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true
[connection signal="mouse_entered" from="." to="." method="_on_InfUnit_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InfUnit_mouse_exited"]
[connection signal="area_entered" from="Detection" to="." method="_on_Detection_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
